# Collage

./: .gitignore  custom_efficientnet_extractor.py  expert_trajectory.pkl  expert_trajectory_manual.npz  hybrid_policy.py  pretrain_bc_seq.py  pretrain_collect_seq.py  pyproject.toml  sac_atari.py  sac_atari_resnet.py  sac_atari_resnet_multi.py  test.py  test_reward.py  train.py  train_crossq.py  train_subproc.py  train_subproc_gan.py  train_subproc_hybrid.py  train_subproc_hybrid_cifar.py  train_subproc_hybrid_her.py  train_subproc_hybrid_jbx.py  train_subproc_hybrid_ppo.py  train_subproc_siamese.py  train_tianshou.py  train_with_bc_loop.py
envs/: collage_env.py  collage_env_discrete copy.py  collage_env_discrete.py  collage_env_hybrid.py  collage_env_hybrid_her.py
gan/: discriminator.py  wgangp_utils.py
loss/: perceptual.py
old/: collage_renderer.py  loss.py  main.py  utils.py
render/: collage_renderer.py  collage_renderer_hybrid.py
utils/: gan_replay_buffer.py  image_utils.py
