[project]
name = "collage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "lpips",
    "kornia",
    "stable_baselines3",
    "gymnasium",
    "tensorboard",
    "tianshou",
    "torchmetrics",
    "timm",
    "geomloss",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true